[project]
name = "core-service"
version = "1.0.0"
description = "core service"
authors = [
    {name = "painkillergodsw",email = "pgod.sw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <=3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.3,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "logger (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
