[project]
name = "dnsx-service"
version = "1.0.0"
description = ""
authors = [
    {name = "pgodsewostyanow",email = "p.god.sw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka (>=0.12.0,<0.13.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tldextract (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
