[project]
name = "naabu-service"
version = "1.0.0"
description = ""
authors = [
    {name = "pgodsewostyanow p.god.sw@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[uvicorn] (>=0.139.2,<0.140.0)",
    "aiokafka (>=0.14.0,<0.15.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
