[project]
name = "subfinder-service"
version = "1.0.0"
description = "subfinder service"
authors = [
    {name = "painkillergodsw"}
]
readme = "README.md"
requires-python = ">=3.13, <=3.14"
dependencies = [
    "fastapi[uvicorn] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
